# letsgetrusty-auth-service

./: compose.yml
app-service/: Cargo.toml  Dockerfile
app-service/src/: main.rs
auth-service/: Cargo.toml  Dockerfile  api_schema.yml
auth-service/assets/: index.html
auth-service/http-client/: health.http  http-client.env.json  root.http  signup.http
auth-service/src/: app_state.rs  config.rs  domain.rs  lib.rs  main.rs  routes.rs  services.rs
auth-service/src/domain/: password.rs  user.rs
auth-service/src/routes/: health.rs  login.rs  logout.rs  signup.rs  verify_2fa.rs  verify_token.rs
auth-service/src/services/: hashmap_user_store.rs  user_store.rs
auth-service/tests/api/: helpers.rs  login.rs  logout.rs  root.rs  routes.rs  signup.rs  verify_2fa.rs  verify_token.rs
