[package]
name = "app-service"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8.8"
axum-extra = { version = "0.12.5", features = ["cookie"] }
tower-http = { version = "0.6.8", features = ["fs"] }
tokio = { version = "1.49", features = ["full"] }
reqwest = { version = "0.13", default-features = false, features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
askama = "0.15.1"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
