[package]
name = "auth-service"
description = "Let's Get Rusty Authorization Service"
authors = ["Fabio Correa"]
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["fs", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
uuid = { version = "1.20.0", features = ["v4", "serde"] }
email_address = "0.2.9"
thiserror = "2.0.18"
secrecy = "0.10.3"
async-trait = "0.1.89"
anyhow = "1.0.100"
dotenvy = "0.15.7"
clap = { version = "4.5.54", features = ["derive", "env"] }

[dev-dependencies]
reqwest = { version = "0.13.1", default-features = false, features = ["json", "cookies"] }
mime = "0.3.17"
fake = { version = "4.4.0", features = ["derive"] }
quickcheck = "1.0.3"
quickcheck_macros = "1.1.0"
rand = "0.9.2"
